--- a/src/home/trang-chi-tiet/chi-tiet-rap/ChiTietRap.scss
+++ b/src/home/trang-chi-tiet/chi-tiet-rap/ChiTietRap.scss
@@ -88,6 +88,7 @@
       transition: all 0.5s;
       border-radius: 7px;
       margin: 0 15px 15px 0;
+      width: 80px;
       &:hover {
         color: var(--primary-color);
         border-color: var(--primary-color);
