--- a/src/home/trang-thong-tin-nguoi-dung/TrangThongTinNguoiDung.scss
+++ b/src/home/trang-thong-tin-nguoi-dung/TrangThongTinNguoiDung.scss
@@ -109,15 +109,25 @@
     .info__content {
       .info-item {
         text-align: left;
+        position: relative;
         label {
           font-weight: 550;
           font-size: 18px;
           margin-top: 30px;
         }
+        svg {
+          position: absolute;
+          right: 10px;
+          bottom: 10px;
+          opacity: 0.5;
+          &.show {
+            opacity: 1;
+          }
+        }
         input {
           color: white;
           width: 100%;
-          padding: 5px;
+          padding: 10px;
           background: transparent;
           border: none;
           border-bottom: 1px solid #ff55a5;
@@ -131,6 +141,7 @@
           color: #999;
           input {
             border-bottom: 1px solid #999;
+            color: #999;
           }
         }
       }
