hoàn thành chức năng đặt vé nhanh và fix bug trang chi tiết chức năng xem hệ thống chiếu

--- a/src/home/trang-chi-tiet/TrangChiTiet.scss
+++ b/src/home/trang-chi-tiet/TrangChiTiet.scss
@@ -93,6 +93,7 @@
     .header-circleStar {
       align-self: center;
       margin-left: auto;
+      flex-shrink: 0;
       .circlePercent {
         i {
           text-shadow: 0 0 6px rgba(255, 88, 96, 0.5);
