hoàn thành chức năng đánh giá

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -32,6 +32,9 @@
     &:hover {
       color: var(--primary-color);
     }
+    &:focus {
+      color: white;
+    }
   }
   i {
     color: white;
