--- a/src/home/trang-dat-ghe/TrangDatGhe.scss
+++ b/src/home/trang-dat-ghe/TrangDatGhe.scss
@@ -211,6 +211,7 @@
       }
     }
   }
+
   .ve__giaVe {
     background: none;
     box-shadow: none;
@@ -257,5 +258,6 @@
   .btn-combo {
     width: 70px;
     height: 70px;
+    // display: none;
   }
 }
