--- a/src/home/trang-chu/he-thong-rap/gio-xem/GioXem.scss
+++ b/src/home/trang-chu/he-thong-rap/gio-xem/GioXem.scss
@@ -31,3 +31,25 @@
     }
   }
 }
+
+.swal-button {
+  cursor: pointer;
+  background-image: linear-gradient(
+    -225deg,
+    var(--light-color) 0%,
+    var(--primary-color) 48%,
+    var(--secondary-color) 100%
+  );
+  border: 1px solid var(--primary-color);
+  background-color: unset;
+  padding: 7px 19px;
+  border-radius: 3px;
+  // width: 12%;
+  color: #fff;
+  transition: all 0.5s;
+  &.swal-button--cancel {
+    background-image: none;
+    background-color: #6c757d;
+    border: none;
+  }
+}
